# Worknest

./: .editorconfig  .env  .gitignore  API_SUMMARY.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  Makefile  OFFLINE_FIRST_ARCHITECTURE.md  ONLINE_FIRST_ARCHITECTURE.md  PHASE2_PROGRESS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  Trunk.toml  VSCODE_EXTENSION_SUMMARY.md  WASM_BUILD.md  build-webapp.sh  clippy.toml  run-all-tests.sh  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  deploy-pages.yml  release.yml  test.yml
crates/worknest-api/: Cargo.toml
crates/worknest-api/src/: error.rs  lib.rs  main.rs
crates/worknest-auth/: Cargo.toml
crates/worknest-auth/src/: error.rs  lib.rs  password.rs  service.rs  token.rs
crates/worknest-core/: Cargo.toml
crates/worknest-core/src/: error.rs  lib.rs  models.rs
crates/worknest-core/src/models/: attachment.rs  comment.rs  project.rs  role.rs  team.rs  ticket.rs  user.rs
crates/worknest-db/: Cargo.toml
crates/worknest-db/src/: connection.rs  error.rs  lib.rs  migrations.rs  repository.rs
crates/worknest-db/src/migrations/: V1__initial_schema.sql  V2__phase2_features.sql
crates/worknest-db/src/repositories/: attachment_repository.rs  comment_repository.rs  mod.rs  project_repository.rs  ticket_repository.rs  user_repository.rs
crates/worknest-gui/: Cargo.toml  TODO.md  index.html
crates/worknest-gui/docs/: LAYER_TESTING_QUICKSTART.md  SENSE_BUGS_FOUND.md  TESTING_FRAMEWORK.md  TESTING_IMPROVEMENTS_SUMMARY.md
crates/worknest-gui/src/: api_client.rs  app.rs  app_mode.rs  events.rs  lib.rs  main.rs  state.rs  theme.rs
crates/worknest-gui/src/components/: breadcrumb.rs  command_palette.rs  empty_state.rs  mod.rs  shortcuts.rs  sidebar.rs  skeleton.rs  toast.rs
crates/worknest-gui/src/screens/: dashboard.rs  login.rs  mod.rs  project_detail.rs  project_list.rs  register.rs  settings.rs  ticket_board.rs  ticket_detail.rs  ticket_list.rs
crates/worknest-gui/tests/: README.md  breadcrumb_tests.rs  command_palette_tests.rs  comprehensive_sense_tests.rs  e2e_tests.rs  empty_state_tests.rs  interaction_tests.rs  kanban_layout_tests.rs  layer_based_tests.rs  shortcuts_tests.rs  skeleton_tests.rs  state_tests.rs  toast_tests.rs  ui_tests.rs
crates/worknest-gui/tests/framework/: api_validation.rs  mod.rs  state_transition.rs  ui_interaction.rs
docs/: API_INTEGRATION.md  GETTING_STARTED.md  UI_UX_ENHANCEMENTS.md
worknest-vscode/: INSTALLATION.md  README.md  package.json
worknest-vscode/src/: extension.ts
worknest-vscode/src/api/: client.ts  types.ts
worknest-vscode/src/commands/: git.ts  tickets.ts
worknest-vscode/src/utils/: config.ts  storage.ts
worknest-vscode/src/views/: statusBar.ts  ticketTree.ts
