[package]
name = "worknest-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
worknest-core = { path = "../worknest-core" }
worknest-db = { path = "../worknest-db" }
worknest-auth = { path = "../worknest-auth" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
validator.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
