[package]
name = "worknest-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
worknest-core = { path = "../worknest-core" }
worknest-db = { path = "../worknest-db" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
