[package]
name = "worknest-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
worknest-core = { path = "../worknest-core" }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
refinery.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile = "3.8"
